--- a/sample-config.env
+++ b/sample-config.env
@@ -1,9 +1,9 @@
 # ____REMOVE THIS LINE AFTER RENAMING sample.config.env to config.env ____
-THUMB_IMAGE = "https://raw.githubusercontent.com/SecktorBot/Brandimages/main/logos/SocialLogo%201.png"
+THUMB_IMAGE = "https://telegra.ph/file/fb7993e24f7ecdaecbed5.jpg"
 port = 5000
-email = "samsamsun789@gmail.com"
+email = "botwhatsapp204@gmail.com"
 global_url = "instagram.com"
-OWNER_NAME = "Suhail Tech"
+OWNER_NAME = "Vajira Tech"
 AUTO_REACTION = false
 FAKE_COUNTRY_CODE = 212
 READ_MESSAGE = false
@@ -15,6 +15,6 @@ LEVEL_UP_MESSAGE= true
 WELCOME_MESSAGE =  "*Hi,* @user \n*Welcome in* @gname \n*Member count* : @count th"
 THEME= SUHAIL
 WORKTYPE = public
-PACK_INFO = "Suhail;multidevice"
+PACK_INFO = "Vajira;multidevice"
 ANTILINK_VALUES = "https://,chat.whatsapp.com"
           
