--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
-  "name": "Suhail-Md By Suhail Tech Info",
+  "name": "Vajita-Md By Vajira Tech Info",
   "description": "A Whatsapp bot built in NodeJs to make experience better\n\t if Any Problem : www.youtube.com/c/SuhailTechInfo",
-  "logo": "https://i.imgur.com/NpA3ZsJ.jpeg",
-  "keywords": ["whatsappbot", "suhailMd", "suhail Md Wa bot", "Suhail-Md", "SuhailMdWhatsaooBot", "SuhailWaBot","SuhailMD","Suhail Md Whatsapp Bot","multi device"],
+  "logo": "https://telegra.ph/file/fb7993e24f7ecdaecbed5.jpg",
+  "keywords": ["whatsappbot", "vajiraMd", "vajira Md Wa bot", "Vajira-Md", "VajiraMdWhatsaooBot", "VajiraWaBot","VajiraMD","Vajira Md Whatsapp Bot","multi device"],
   "success_url": "/",
   "stack": "container",
 "env": {
   "OWNER_NAME": {
     "description": "Name of Bot Owner",    
-    "value": "Suhail Tech Info",
+    "value": "Vajira Tech Info",
     "required" :true
   }, 
   "HEROKU_API_KEY": {
@@ -62,7 +62,7 @@
   },
   "OWNER_NUMBER": {
     "description": "The phone numbers of the users who you want to be admin for the bot (should be in international format without + and multiple numbers must be separated by a comma \",\")",
-    "value": "923184474176"
+    "value": "94766943622"
   },
    "SESSION_ID": {
     "description": "Please put your SESSION_ID here,if you don't have visit\nhttps://replit.com/@SuhailTechInfo/Secktor-Bot"
@@ -74,16 +74,16 @@
   }, 
   "REMOVE_BG_KEY": {
     "description": "Please put your REMOVE BG KEY here.Get it from removeBg.com ",
-    "value": "",
+    "value": "9L35hT7pWYXHgWjVZpkc5scp",
     "required" :false
   },
   "MONGODB_URI": {
     "description": "Put your own Mongodb key. Its a secret String for Mongodb Connection.(Required)",
-    "value": ""
+    "value": "mongodb+srv://vajira:vajira@cluster0.hzwqrqq.mongodb.net/?retryWrites=true&w=majority"
   },
   "MODE": {
     "description": "Worktype of your bot. Use public or private, if it is private then only bot number can use it. If public then everyone can use it.",
-    "value": "private"
+    "value": "public"
   },
   "AUTO_REACTION": {
     "description": "Available option : cmd(react only cmds) | all (all emojis) | true (facial + hearts emojies)    ",
