--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,8 +1,8 @@
 # -  /SuhailTechInfo/
 
 FROM quay.io/suhailtechinfo/suhail-v2
-RUN git clone https://github.com/SuhailTechInfo/Suhail-Md /root/Suhail
-WORKDIR /root/Suhail/
+RUN git clone https://github.com/vajirabot1/KING-VAJIRA-MD /root/vajirabot1
+WORKDIR /root/vajirabot1/
 RUN npm install
 EXPOSE 8000
 CMD ["npm","start","yarn" ]
