--- a/app.json
+++ b/app.json
@@ -65,7 +65,7 @@
     "value": "94766943622"
   },
    "SESSION_ID": {
-    "description": "Please put your SESSION_ID here,if you don't have visit\nhttps://replit.com/@SuhailTechInfo/Secktor-Bot"
+    "description": "Please put your SESSION_ID here,if you don't have visit\nhttps://replit.com/@VajiraRathnayak/KING-VAJIRA-MD?v=1"
   },
   "OPENAI_API_KEY": {
     "description": "Please put your OPENAI api key here.Get it from beta.openai.com ",
