--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Vajita-Md By Vajira Tech Info",
+  "name": "Vajita-Md By Vajira Tech Yt",
   "description": "A Whatsapp bot built in NodeJs to make experience better\n\t if Any Problem : www.youtube.com/c/SuhailTechInfo",
   "logo": "https://telegra.ph/file/fb7993e24f7ecdaecbed5.jpg",
   "keywords": ["whatsappbot", "vajiraMd", "vajira Md Wa bot", "Vajira-Md", "VajiraMdWhatsaooBot", "VajiraWaBot","VajiraMD","Vajira Md Whatsapp Bot","multi device"],
