--- a/config.env
+++ b/config.env
@@ -13,7 +13,7 @@ DISABLE_PM = false
 ANTI_BAD_WORD = "fuck"
 LEVEL_UP_MESSAGE= true
 WELCOME_MESSAGE =  "*Hi,* @user \n*Welcome in* @gname \n*Member count* : @count th"
-THEME= SUHAIL
+THEME= VAJIRA
 WORKTYPE = public
 PACK_INFO = "Vajira;multidevice"
 ANTILINK_VALUES = "https://,chat.whatsapp.com"
